<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.verbosetech.cookfu.fragment.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/locationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="3dp">

            <LinearLayout
                android:id="@+id/location_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_pincode"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/xxsmall_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/locationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location_on_grey_24dp"
                    android:drawablePadding="@dimen/dp4"
                    android:drawableStart="@drawable/ic_location_on_grey_24dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimaryDarkTheme"
                    android:textSize="@dimen/xsmall_text"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:textSize="@dimen/xxsmall_text"
                android:text="@string/change_location"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/location_view"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@+id/locationContainer"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp8"
            android:paddingRight="@dimen/dp8">

            <!--<android.support.v7.widget.CardView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="@dimen/dp8"-->
                <!--android:layout_marginBottom="@dimen/dp8">-->

                <!--<fragment-->
                    <!--android:id="@+id/autocomplete_fragment"-->
                    <!--android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content" />-->

            <!--</android.support.v7.widget.CardView>-->
            <EditText
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginRight="@dimen/dp8"
                android:layout_weight="1"
                android:background="@drawable/round_white"
                android:drawableLeft="@drawable/ic_search_gray_24dp"
                android:drawablePadding="@dimen/dp8"
                android:drawableStart="@drawable/ic_search_gray_24dp"
                android:hint="@string/hint_home_search"
                android:maxLines="1"
                android:paddingLeft="@dimen/dp8"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

            <!--<FrameLayout-->
                <!--android:id="@+id/refine"-->
                <!--android:layout_width="48dp"-->
                <!--android:layout_height="48dp"-->
                <!--android:background="@drawable/round_white">-->

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:src="@drawable/ic_location_on_accent_24dp" />-->
            <!--</FrameLayout>-->
        </LinearLayout>
    </RelativeLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/round_background"
                android:elevation="2dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/order_food_online"
                        android:textSize="@dimen/small_text"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/promo"
                        android:textColor="@android:color/holo_blue_bright"
                        android:textSize="@dimen/xsmall_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:src="@drawable/ic_car" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:paddingBottom="5dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_background"
                    android:baselineAligned="true"
                    android:elevation="2dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/flowers" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Gold - OPEN NOW!"
                            android:textSize="@dimen/small_text"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/get_1_1_on_food_or_2_2_on_drinks"
                            android:textColor="@color/gold"
                            android:textSize="@dimen/xsmall_text" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/buy_now"
                                android:textColor="@android:color/holo_green_light"
                                android:textSize="@dimen/xxsmall_text" />

                            <ImageView
                                android:layout_width="@dimen/xsmall_text"
                                android:layout_height="@dimen/xsmall_text"
                                android:layout_marginLeft="10dp"
                                android:src="@drawable/ic_right" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:baselineAligned="true"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_background"
                        android:elevation="2dp"
                        android:padding="0dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="-8dp"
                            android:src="@drawable/pig" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="3dp"
                            android:layout_marginLeft="10dp"
                            android:layout_toLeftOf="@+id/button_piggybank"
                            android:orientation="vertical"
                            android:paddingStart="18dp"
                            android:padding="5dp"
                            android:paddingLeft="18dp"
                            android:layout_marginStart="10dp"
                            android:layout_toStartOf="@+id/button_piggybank">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/piggy_bank"
                                android:textSize="@dimen/small_text"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/get_it_now"
                                android:textColor="@android:color/holo_green_light"
                                android:textSize="@dimen/xxsmall_text" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/button_piggybank"
                            android:layout_width="@dimen/xsmall_text"
                            android:layout_height="@dimen/xsmall_text"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"
                            android:src="@drawable/ic_right" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_background"
                        android:elevation="2dp"
                        android:padding="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="3dp"
                            android:layout_marginLeft="10dp"
                            android:layout_toLeftOf="@+id/button_book_table"
                            android:orientation="vertical"
                            android:paddingLeft="18dp"
                            android:padding="5dp"
                            android:paddingStart="18dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/book_a_table"
                                android:textSize="@dimen/small_text"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/in_a_few_taps"
                                android:textColor="@android:color/holo_green_light"
                                android:textSize="@dimen/xxsmall_text" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/button_book_table"
                            android:layout_width="@dimen/xsmall_text"
                            android:layout_height="@dimen/xsmall_text"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"
                            android:src="@drawable/ic_right" />


                        <ImageView
                            android:layout_toLeftOf="@+id/button_book_table"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:src="@drawable/ic_table" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:layout_marginTop="5dp"
                android:background="@color/lightGrey"
                android:orientation="vertical"
                android:padding="@dimen/dp16">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp8"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/dp4"
                        android:paddingTop="@dimen/dp4"
                        android:text="@string/label_order"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/dp4"
                        android:paddingTop="@dimen/dp4"
                        android:text="View all"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp16"
                    android:layout_marginRight="@dimen/dp16"
                    android:layout_marginTop="@dimen/dp16"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/dp4"
                    android:paddingTop="@dimen/dp4"
                    android:text="@string/label_restaurants"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerRestaurants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp8"
                    android:layout_marginRight="@dimen/dp8" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
